0.1 - 0.2

* Converted to use unix-privesc-check style file layout
* Cleaned up check descriptions and messages
* Added lib/checks/binary_SSL_cipher and lib/checks/binary_SSL_protocol
* Added tools/dump_process
* tools/generate_docs.sh now dumps binary search strings
* Cleaned up based on shellcheck output
* Added note to doc/COPYING referencing Twitter exchange with i0n1c about
  dumpdecrypted
* Added lib/checks/enabled/post-install-quick and lib/checks/enabled/post-test-quick
  which won't calculate the hashes for all files

0.0 - 0.1

* Initial PoC